tests/errors/test_28.x
let x: int = -1;

fn main() -> int {

    let y: int* = &x;

}